fix padding on inline post form on mobile

--- a/src/css/community/posts.less
+++ b/src/css/community/posts.less
@@ -103,8 +103,7 @@
     border-radius: @border-radius-base;
 
     @media (max-width: @screen-xs-max) {
-      margin-left: -@std-padding;
-      margin-right: -@std-padding;
+      margin-top: -@std-padding;
       border-top: none;
       border-left: none;
       border-right: none;
